refactor: Improve registration form functionality and code structure

--- a/register.html/register.html
+++ b/register.html/register.html
@@ -1,36 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./registerstyles.css">
 </head>
+
 <body>
     <h2 id="head">註冊會員</h2>
     <p>使用者名稱: <input type="text" id="userName"></p>
     <p>登入帳號：<input type="text" id="name"></p>
     <p>登入密碼： <input type="text" id="password"></p>
-    <button type="button" id="send">送出</button>     <button>清除</button>
+    <button type="button" id="send">送出</button> <button>清除</button>
 
 
-    
+
 </body>
+
 </html>
 
 <script>
-    const userName = document.getElementById("userName");
-    const userNameValue = userName.value;
-    const name = document.getElementById("name");
-    const nameValue = name.value;
-    const password = document.getElementById("password");
-    const passwordValue = password.value;
-
-
-    document.getElementById('send').onclick = function(){
-        alert('名稱：' + userNameValue+'\n帳號：' + nameValue + '\n密碼：' + passwordValue
-    )
+    document.getElementById('send').onclick = function () {
+        const userName = document.getElementById("userName");
+        const userNameValue = userName.value;
+        console.log('userNameValue>', userNameValue)
+        const name = document.getElementById("name");
+        const nameValue = name.value;
+        const password = document.getElementById("password");
+        const passwordValue = password.value;
+        alert('名稱：' + userNameValue + '\n帳號：' + nameValue + '\n密碼：' + passwordValue
+        )
     }
 
-    
+
 </script>
